# keres

./: .env  .env.dev.example  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  ENGINE_IMPROVEMENTS.md  GPU_ACCESS_VERIFICATION.md  MINIMAX_IMPLEMENTATION.md  MINIMAX_SECURITY.md  OPTIMIZATION_SUMMARY.md  README.md  SECURITY_SUMMARY.md  TOURNAMENT.md  check_gpu.sh  compose.yaml  db-backup.sh  rules.md  server.md  test_performance.sh
client/: ARCHITECTURE.md  index.html  package-lock.json
deploy/: .env.example  README.md  compose.yaml  db-backup.sh
docs/: IMPLEMENTATION_SUMMARY.md  MCTS_ENGINE_SPECIFICATIONS.md  MINIMAX_IMPLEMENTATION.md  PROTOCOL.md  TODO.md  encoding.md  mercure-integration.md  messenger-worker-setup.md  rules.md
engine/: Cargo.toml  Dockerfile
engine/examples/: analyze_moves.rs  analyze_response.rs  check_g9_moves.rs  debug_capture.rs  engine_demo.rs  test_capture.rs
engine/src/: board.rs  cli_rendering.rs  debug.rs  game.rs  lib.rs  main.rs  moves.rs  server.rs
engine/src/engine/: README.md  ab_engine.rs  config.rs  constants.rs  eval.rs  evaluator.rs  gpu_batch_processor.rs  mcts_engine.rs  mod.rs  search.rs  search_config.rs  search_engine.rs  search_tree.rs  see.rs  stage1.rs  tt.rs  types.rs  visitor.rs  zobrist.rs
engine/src/engine/eval/: material.rs  promotion.rs  pst.rs  tempo.rs
engine/src/engine/search/: alpha_beta.rs  mod.rs  move_ordering.rs  negamax.rs  quiescence.rs
engine/src/engine/shaders/: move_generation.wgsl  rollout.wgsl
examples/: analyze_king_safety.rs  analyze_moves.rs  analyze_response.rs  check_g9_moves.rs  compare_positions.rs  debug_capture.rs  engine_demo.rs  engine_tournament.rs  quick_variant_test.rs  test_capture.rs  test_capture2.rs  test_gpu_initial_board.rs  test_king_capture.rs  test_no_tt.rs  test_parallelization.rs  test_stacked_promotion.rs  test_weights.rs
infrastructure/: compose.yaml
mcts-visualizer/: compose.yaml
plateform/: .env  .gitignore  Dockerfile  compose.override.yaml  compose.prod.yaml  compose.yaml  composer.json  package-lock.json  package.json  vite.config.js
platform/: .env  .gitignore  .php-cs-fixer.dist.php  AGENTS.md  Dockerfile  Dockerfile.base  compose.override.yaml  compose.prod.yaml  compose.yaml  composer.json  package.json  vite.config.js
public/: ARCHITECTURE.md  app.js  index.html  package.json  tsconfig.json  vite.config.ts
src/: board.rs  (+9 more)
(+312 files in other folders)
