[package]
name = "keres"
version = "0.1.0"
edition = "2021"
authors = ["Vincent Chalnot"]
description = "A library for the abstract game Keres"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
rayon = "1.10"
ahash = "0.8.12"
once_cell = "1.21.3"
mimalloc = "0.1.48"

[lib]
name = "keres_engine"
path = "src/lib.rs"

[[bin]]
name = "keres"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[profile.profiling]
inherits = "release"
debug = 1

[target.x86_64-unknown-linux-musl]
linker = "musl-gcc"

[target.x86_64-unknown-linux-musl.dependencies]
mimalloc = "0.1.43"